fix: spacing incorrect.

--- a/features/get-in-touch/get-in-touch.module.css
+++ b/features/get-in-touch/get-in-touch.module.css
@@ -1,5 +1,3 @@
-.wrapper {
-  .contact {
-    margin-top: var(--mantine-spacing-xs);
-  }
+.contact {
+  margin-top: var(--mantine-spacing-xs);
 }
